# project-akhir-struktur-data-grup-b-st-kelompok

./: README.md  funcs.py  login.py  main.py  page_ai.py  page_bookmark.py  page_login.py  page_read.py  page_register.py  page_saved.py  pyproject.toml  read.py  requirements.txt
.streamlit/: config.toml
pages/: read.py
