[project]
name = "project-akhir-struktur-data-grup-b-st-kelompok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bs4>=0.0.2",
    "google-generativeai>=0.8.5",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "st-gsheets-connection>=0.1.0",
    "streamlit>=1.51.0",
]
